--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/qrcode": "^1.5.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "html5-qrcode": "^2.3.8",
+    "html5-qrcode": "2.3.4",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "next": "15.5.4",
