--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "generate-tiles": "node generate-board-tiles.js"
   },
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
